crates/jsonschema-macros/tests/ui/invalid_pattern_regex.stderr
error: Invalid `pattern` regular expression: (
 --> tests/ui/invalid_pattern_regex.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"pattern":"("}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
