crates/jsonschema-macros/tests/ui/invalid_pattern_regex.rs
#[jsonschema::validator(schema = r#"{"pattern":"("}"#)]
struct Validator;

fn main() {}
